--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dartz: ^0.10.1
   build_runner: ^2.1.11
   dio: ^4.0.6
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
